# odb-utils

./: .gitignore  .gitlab-ci.yml  ChangeLog  Makefile.am  Makefile.in  THIS_IS_MASTER  aclocal.m4  configure  configure.ac  oi_odb_utils.pc.in
packaging/SPECS/: liboi-odb-utils.spec  oi-odb-utils.spec
src/: Makefile.am  Makefile.in  odb_async_worker.cpp  odb_async_worker.hpp  odb_headers.hpp  odb_stat.cpp  odb_stat.hpp  odb_utility.hpp  odb_worker.cpp  odb_worker.hpp
src/type_traits/: std-chrono-hight-resulation-traits.hpp  std_chrono.hpp  std_chrono_oracle.hpp
test/: Makefile.am  Makefile.in  blocking_mode.cpp  blocking_small_tbs.cpp  blocking_small_tbs_drop_failed.cpp  db_util.cpp  db_util.hpp  main.cpp  odb.options  odb.sh  oojibo_fds.hpp  req_agent.hpp  req_agent.sql  req_agent_odb.cpp  req_agent_odb.hpp  req_agent_odb_inline.hpp  student-odb.cxx  student-odb.hpp  student.hpp  student.sql  student_odb.cpp  student_odb.hpp  student_odb_inline.hpp  test_post_callback  test_post_handler.cpp
